# aXemg

./: .gitignore  ARQUTECTURA.md  README.md  pyproject.toml
Doc/: ARCHITECTURE.md  EXAMPLES.md  LIMITATIONS.md  PHYSICS.md  USER_MANUAL.md
axion_em_gr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: boundary_mixed_2d.yaml  boundary_sommerfeld_1d.yaml  compact_metric_rotating_dipole_2d.yaml  constraint_cleaned_2d_dirichlet_poisson_mixed_boundary.yaml  constraint_solved_1d.yaml  curved_axion_maxwell_2d.yaml  curved_constraint_cleaned_2d.yaml  curved_maxwell_2d.yaml  flat_axion_em_1d.yaml  flat_axion_em_2d.yaml  flat_axion_em_2d_test.yaml  sweep_constraint_solved_1d_g.yaml  sweep_gw_amplitude_1d.yaml  sweep_gw_axion_halo_h.yaml  sweep_rotating_dipole_omega.yaml
examples/: EXAMPLES.md  animate_compact_object_case.py  animate_from_config.py  animate_scientific_from_config.py  animate_snapshots_1d.py  animate_snapshots_2d.py  canonical_cases.py  generate_examples_index.py  plot_sweep_summary.py  run_2d_animations.py  run_2d_animations_minimal.py  run_axion_em_coupling.py  run_boundary_comparison_1d.py  run_boundary_comparison_2d.py  run_canonical.py  run_cleaning_method_comparison_2d.py  run_compact_metric_rotating_dipole_2d.py  run_constraint_cleaned_2d.py  run_constraint_solved_1d.py  run_curved_2d_axion_compact_metric.py  run_curved_2d_rotating_dipole.py  run_curved_axion_1d.py  run_curved_axion_em_1d.py  run_curved_axion_maxwell_2d.py  run_curved_constraint_cleaning_2d.py  run_curved_maxwell_2d.py  run_flat_axion.py  run_flat_axion_em_2D.py  run_flat_axion_em_2d_diagnostics.py  run_flat_axion_em_2d_snapshots.py  run_flat_maxwell.py  run_from_config.py  run_gw_amplitude_scan.py  run_gw_axion_halo_1d.py  run_gw_background.py  run_gw_vs_flat.py  run_gw_vs_flat_diagnostics.py  run_rotating_dipole_axion_2d.py  run_schwarzschild_axion_1d.py  run_sweep_from_config.py  (+1 more)
(+84 files in other folders)
